# agentwatch

./: .gitignore  README.md  agent_monitor.py  package-lock.json  package.json
docs/: macos-installation.md  packaging.md  release-verification.md  service-quickstart.md
scripts/: archive-service-release.mjs  archive-service-release.test.mjs  benchmark-compare.mjs  benchmark-headless.mjs  benchmark-python.mjs  benchmark-report.mjs  benchmark-report.test.mjs  benchmark-runtime.mjs  browser-remote-report.test.mjs  bundle-desktop-release.mjs  bundle-desktop-release.test.mjs  bundle-service-release.mjs  ci-workflow.test.mjs  collect-release-assets.mjs  create-macos-dmg.sh  dashboard-contract.test.mjs  desktop-release-status.mjs  desktop-release-status.test.mjs  finalize-release-assets.mjs  i18n.test.mjs  import-remote-report.mjs  import-remote-report.test.mjs  import-tray-report.mjs  import-tray-report.test.mjs  install-macos-app.sh  install-macos-app.test.mjs  install-service-linux.sh  install-service-macos.sh  install-service-windows.ps1  lan-preflight.mjs  lan-preflight.test.mjs  package-local.mjs  package-local.test.mjs  python-unittest.mjs  refresh-release-evidence.mjs  refresh-release-evidence.test.mjs  release-assets.test.mjs  release-audit.mjs  release-audit.test.mjs  release-manifest.mjs  (+49 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity_log.rs  config.rs  lib.rs  main.rs  monitor.rs  server.rs  tray.rs  update.rs  usage.rs
static/: app.js  i18n.js  index.html  styles.css
(+2 files in other folders)
