[package]
name = "agentwatch"
version = "0.2.13"
description = "LAN dashboard and tray app for monitoring local LLM agents"
authors = ["AgentWatch"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "agentwatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agentwatch"
path = "src/main.rs"

[[bin]]
name = "agentwatch-server"
path = "src/bin/agentwatch-server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
